--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "postcss": "^8.5.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.57.0",
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
